# mova

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  docker-compose.build.yml  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.node.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-pages.yml  deploy-site.yml  sync-dockerhub-overview.yml
apps/mova-server/: AGENTS.md  Cargo.toml  Dockerfile  README.md
apps/mova-server/src/: app.rs  auth.rs  config.rs  embedded_metadata.rs  error.rs  main.rs  metadata_provider_config.rs  realtime.rs  response.rs  state.rs  sync_runtime.rs
apps/mova-server/src/handlers/: auth.rs  health.rs  home.rs  libraries.rs  media_files.rs  media_items.rs  mod.rs  notifications.rs  playback_progress.rs  realtime.rs  search.rs  seasons.rs  server.rs  subtitle_files.rs  users.rs  watch_history.rs
apps/mova-server/src/routes/: auth.rs  health.rs  home.rs  libraries.rs  media_files.rs  media_items.rs  mod.rs  notifications.rs  playback_progress.rs  realtime.rs  search.rs  seasons.rs  server.rs  subtitle_files.rs  users.rs  watch_history.rs
apps/mova-site/: .gitignore  AGENTS.md  CNAME  README.md  package-lock.json  package.json  tsconfig.app.json
apps/mova-web/: AGENTS.md  Dockerfile  README.md  biome.json  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
crates/: AGENTS.md  README.md
crates/mova-application/: Cargo.toml  README.md
crates/mova-application/src/: cache.rs  error.rs  file_sync.rs  home.rs  intro_detection.rs  lib.rs  libraries.rs  media_cast.rs  media_classification.rs  media_enrichment.rs  media_items.rs  metadata.rs  metadata_match.rs  notifications.rs  playback_header.rs  playback_progress.rs  scan_jobs.rs  users.rs  watch_history.rs
crates/mova-db/: Cargo.toml  README.md
crates/mova-domain/: Cargo.toml  README.md
crates/mova-scan/: Cargo.toml  README.md
docker/base/: README.md  runtime.Dockerfile  rust-build.Dockerfile  web-build.Dockerfile
docs/: API.md  ARCHITECTURE.md  CACHE.md  DEPLOYMENT.md  DOCKER_HUB.md  MEDIA_LIBRARY_SCAN.md  REALTIME.md  ROADMAP.md  SCAN_PIPELINE.md  SSE.md  TMDB.md
migrations/: 0001_init.sql  AGENTS.md
public/: 404.html  site.webmanifest
release/app-store/: metadata-en-US.md  open-source-notice.md  screenshot-plan.md  submission-checklist.md
scripts/: AGENTS.md  detect_intro.py  publish-docker-images.sh
skills/mova-backend/: SKILL.md
skills/mova-frontend/: SKILL.md
src/: App.css  App.tsx  i18n.tsx
src/components/: DashboardPreview.tsx  Header.css  Header.tsx  MovaIcon.css  MovaIcon.tsx  SectionTitle.css  SectionTitle.tsx
src/data/: apiDocs.ts  homeContent.ts
src/pages/: ApiDocsPage.css  ApiDocsPage.tsx  DeploymentPage.css  DeploymentPage.tsx  (+5 more)
(+246 files in other folders)
